<resources>
    <string name="app_name">GeoNotes</string>
    <string name="title_provider">Verfügbare Provider:</string>
    <string name="button_lokalisierung_off">LOKALISIERUNG STARTEN</string>
    <string name="button_lokalisierung_on">LOKALISIERUNG GESTARTET</string>
    <string name="button_standort">STANDORT ANZEIGEN</string>
    <string name="title_geodaten_empfangen">Geodaten empfangen:</string>
    <string name="no_actual_note">Bitte Notiz auswählen oder speichern</string>
    <string name="empty_field_not_allowed">"Thema" und "Notiz" durfen nicht leer sein</string>
    <string name="actual_project">Aktuelles Projekt:\u0020</string>
    <string name="subject_title">Thema</string>
    <string name="note_title">Notiz</string>
    <string name="no_notes_available">keine Notizen vorhanden</string>
    <string name="button_save_title">NOTIZ SPEICHERN</string>
    <string name="no_knownLastPosition_available">Noch keine Geoposition ermittelt. Bitte später nochnmal versuchen</string>
    <string name="edit_note">Notiz weiter bearbeiten?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="note_sucessfully_created">The new note and subject was sucessfully saved</string>
    <string name="note_sucessfully_edited">The existing note was sucessfully updated with new thema and subject</string>
    <string name="project_title_alert_dialog">Projectbeschreibung eingeben / ändern</string>
    <string name="project_name_change">Übernehmen</string>
    <string name="cancel">Abbrechen</string>
    <string name="no_project_saved_yet">Noch keine Projekte vorhanden</string>
    <string name="note_deleted">Notiz gelöscht!</string>
    <string name="project_deleted">Projekt gelöscht! Ein neues Projekt wurde angelegt.</string>
    <string name="project_not_deleted">Projekt konnte nicht gelöscht werden!</string>
    <string name="select_a_note_before_pressing_delete">Wählen Sie eine Notiz zum Löschen</string>
    <string name="confirm_deletion">Löschen der letzten Notiz löscht das Projekt. Fortfahren?</string>
    <string name="choose_a_project">Projekt auswählen</string>
    <string name="menu_title_item_send_project">Projekt verschicken</string>
    <string name="menu_title_item_chose_project">Projekt auswählen</string>
    <string name="menu_title_item_edit_project">Projektnamen ergänzen</string>
    <string name="menu_title_item_delete_note">Notiz löschen</string>
    <string name="menu_title_item_show_in_osm">Auf OSM anzeigen</string>
    <string name="menu_title_item_settings">Settings</string>
    <string name="menu_title_item_quiet">Nicht in Bewegung</string>
    <string name="menu_title_item_foot">Zu Fuß (9 sec/10 m)</string>
    <string name="menu_title_item_bicycle">Rad (4 sec/25 m)</string>
    <string name="menu_title_item_car">PKW (4 sec/50 m)</string>
    <string name="menu_title_item_car_fast">PKW fern (4 sec/100 m)</string>
    <string-array name="spinner_provider">
        <item>EXAMPLE1:passive</item>
        <item>EXAMPLE2:gps</item>
        <item>EXAMPLE3:network</item>
    </string-array>
</resources>
