<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_provider" />
    <Spinner
        android:id="@+id/spinnerProviders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_provider">
    </Spinner>
    <ToggleButton
        android:id="@+id/toggle_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/button_lokalisierung_off"
        android:textOn="@string/button_lokalisierung_on"
        android:onClick="onToggleButtonClick"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="#000"
        android:layout_margin="4dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/actual_project"
        android:text="@string/actual_project"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/note"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_previous"
            android:layout_alignParentLeft="true"
            android:onClick="onButtonPreviousNoteClick"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_media_next"
            android:layout_alignParentRight="true"
            android:onClick="onButtonNextNoteClick"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_title"
        android:onClick="onSaveNoteButtonClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonShowPositionClick"
        android:text="@string/button_standort"/>
    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_geodaten_empfangen"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_output"/>
    -->
</LinearLayout>